--- a/src/Components/ProductCarrinho.module.css
+++ b/src/Components/ProductCarrinho.module.css
@@ -42,14 +42,14 @@
 }
 
 .divButtons {
-  width: 80px;
+  width: 100px;
   height: 25px;
   background-color: #f1f1f1;
   display: flex;
   justify-content: center;
   align-items: center;
   border-radius: 10px;
-  padding: 0 10px;
+  padding: 0 10px 0 15px;
   margin-bottom: 5px;
 }
 
