--- a/src/Pages/Home/Home.css
+++ b/src/Pages/Home/Home.css
@@ -22,9 +22,8 @@ h2 {
 }
 
 .HomeDiv p {
-  flex-grow: 1;
   text-align: center;
-  margin: auto;
+  margin: 0 auto;
   font-size: 1.1em;
   color: #a19797;
 }
